--- a/app/src/main/res/layout/item_job_bookmarks.xml
+++ b/app/src/main/res/layout/item_job_bookmarks.xml
@@ -35,6 +35,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="View More" />
+
+        <ImageView
+            android:id="@+id/delete_bookmarks"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/remvove" />
+
     </LinearLayout>
 </layout>
 
