--- a/app/src/main/res/layout/item_job_bookmarks.xml
+++ b/app/src/main/res/layout/item_job_bookmarks.xml
@@ -1,47 +1,132 @@
 <!-- res/layout/item_job.xml -->
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
-    <LinearLayout
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <com.google.android.material.card.MaterialCardView
+        android:layout_margin="12dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:elevation="7dp"
+        app:cardCornerRadius="3dp">
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Title" />
+            android:orientation="vertical"
+            android:padding="16dp">
 
-        <TextView
-            android:id="@+id/location"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Location" />
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:maxLines="1"
+                android:textSize="14dp"
+                android:textStyle="bold"
+                android:fontFamily="@font/bariol_bold"
+                android:layout_height="wrap_content"
+                android:text="Title" />
 
-        <TextView
-            android:id="@+id/salary"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Salary" />
+            <LinearLayout
+                android:background="#FBEDED"
+                android:layout_marginTop="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/phone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Phone Number" />
+                <ImageView
+                    android:layout_margin="3dp"
+                    android:layout_width="30dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/map"/>
 
-        <Button
-            android:id="@+id/viewMore"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="View More" />
+                <TextView
+                    android:id="@+id/location"
+                    android:layout_gravity="center"
+                    android:layout_width="wrap_content"
+                    android:fontFamily="@font/futura_medium"
+                    android:layout_marginRight="5dp"
+                    android:layout_height="wrap_content"
+                    android:textSize="12sp"
+                    android:text="Location" />
 
-        <ImageView
-            android:id="@+id/delete_bookmarks"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:src="@drawable/remvove" />
+            </LinearLayout>
 
-    </LinearLayout>
+            <LinearLayout
+                android:background="#EEFAE7"
+                android:layout_marginTop="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_margin="3dp"
+                    android:layout_width="30dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/salary"/>
+
+                <TextView
+                    android:id="@+id/salary"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="5dp"
+                    android:textSize="12sp"
+                    android:fontFamily="@font/futura_medium"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="12000" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_marginTop="5dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:weightSum="2"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/phone"
+                    android:textColor="@color/black"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="1"
+                    android:textAlignment="center"
+                    android:layout_gravity="center"
+                    android:layout_width="0dp"
+                    android:backgroundTint="#EFEF3D"
+                    android:fontFamily="@font/bariol_bold"
+                    style="@style/Widget.MaterialComponents.Button.Icon"
+                    app:icon="@drawable/phonec"
+                    android:layout_height="wrap_content"
+                    android:text="Call Us" />
+
+                <Button
+                    android:id="@+id/viewMore"
+                    android:layout_marginLeft="5dp"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/bariol_bold"
+                    style="@style/Widget.MaterialComponents.Button.Icon"
+                    app:icon="@drawable/rightview"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Check Job" />
+
+            </LinearLayout>
+
+            <LinearLayout
+               android:gravity="center"
+                android:background="#F80A0A"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+            <ImageView
+                android:layout_margin="5dp"
+                android:id="@+id/delete_bookmarks"
+                android:layout_width="60dp"
+                android:layout_height="30dp"
+                android:src="@drawable/bin" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+    </com.google.android.material.card.MaterialCardView>
 </layout>
 
