--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -5,13 +5,13 @@
     <item
         android:id="@+id/nav_jobs"
         android:icon="@drawable/jobs"
-        android:title="Jobs"
+        android:title=""
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/nav_bookmarks"
         android:icon="@drawable/bookmark"
-        android:title="Bookmarks"
+        android:title=""
         app:showAsAction="ifRoom" />
 
 </menu>
